tests/baselines/reference/unusedClassesinNamespace1.errors.txt
tests/cases/compiler/unusedClassesinNamespace1.ts(2,5): error TS6133: 'c1' is declared but its value is never read.


==== tests/cases/compiler/unusedClassesinNamespace1.ts (1 errors) ====
    namespace Validation {
        class c1 {
        ~~~~~~~~
!!! error TS6133: 'c1' is declared but its value is never read.
    
        }
    }